java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint194018d.pass
package org.netbeans.test.java.hints;

import Map.Entry;
import Map.*;
import static Collections.sort;
import static java.util.Collections.*;

public class ImportInImport {
    
}
